# nodespeak

./: .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.sh  compiler.py  desugarifier.py  lexical_analyzer.py  out_parse.py  project.code-workspace  scope.py  scopifier.py  token.py  tokenifier.py  tokens.cpp  waveguide.l
algebra/: algebra_engine.py  algebra_engine_v2.py
compiler_v1/: compiler.py  errors.py  scope.py  util.py
compiler_v2/: compiler.py  constants.py  context_free_grammars.py  errors.py  finite_automata.py  finite_automota.py  lexical_analyzer.py  mini_regexp.py  syntax_analyzer.py
compiler_v3/: .gitignore  .ycm_extra_conf.py  build.sh  debug.sh  interpreter.cpp  interpreter.h  run.sh  sample.wg  sample.wg.old  scope.cpp  scope.h  tokens.cpp  tokens.h  waveguide.l  waveguide.y
design/: design2.md  language.md  syntax.md  vague.md
examples/: amplifier.ns  amplifier.wg  arithmetic.ns  arithmetic.wg  arrays.wg  errors.ns  errors.wg  structure.wg
include/: ast_util.hpp  parser.hpp
include/waveguide/: compile.hpp  intermediate.hpp  util.hpp  waveguide.hpp
include/waveguide/_shared/: value.hpp
include/waveguide/ast/: ast_printer.hpp  types.hpp
include/waveguide/parser/: ast.hpp  (+2 more)
old/convert/: ast_converter.hpp  declarations.cpp  utilities.cpp
samples/: old_sample.wg  sample.wg
source/: DataType.cpp  DataType.h  Scope.cpp  Scope.h  Value.cpp  Value.h  util.hpp  waveguide.l  waveguide.y
source/Grammar/: Token.cpp
source/_shared/: value.cpp
source/ast/: ast_printer.cpp  ast_printer.hpp  fusion_types.hpp  parser.cpp  parser.hpp  parser_error.hpp  parser_rules.hpp
source/convert/: Convert.cpp  Convert.h  DataTypes.convert.cpp  Expressions.convert.cpp  Operators.convert.cpp  Statements.convert.cpp  Utils.cpp  Utils.h  ast_converter.cpp  ast_converter.hpp  declarations.cpp  expressions.cpp  statements.cpp  utilities.cpp
source/grammar/: All.h  DataTypes.cpp  DataTypes.h  Expressions.cpp  Expressions.h  Operators.cpp  Operators.h  Statements.cpp  Statements.h  Token.h
source/parser/: ast.hpp  ast_adapted.hpp  ast_printer.cpp  ast_printer.hpp  main.cpp  parser.cpp  parser.hpp  parser_error.hpp  parser_rules.hpp
source/squash/: all_passes.cpp  cast_pass.cpp  passes.hpp
source/util/: aliases.hpp  static_visitor.hpp
source/vague/: builtins.cpp  value.cpp
source/x3test/: ast.hpp  ast_adapted.hpp  ast_printer.hpp  config.hpp  main.cpp  parser.cpp  parser.hpp  parser_rules.hpp  rules.hpp
src/: concrete.rs  lib.rs  main.rs  parser.rs  problem.rs  tests.rs  types.rs  values.rs
src/ast/: grammar.pest  mod.rs
src/high_level/: compiler.rs  mod.rs  problem.rs
src/interpreter/: func_call.rs  interpreter.rs  mod.rs  resolver.rs  util.rs
src/llvm/: ingest.rs  structure.rs
src/llvmir/: ingest.rs  structure.rs
src/native/: mod.rs
src/parser/: grammar.pest  mod.rs  parser.rs
src/problem/: mod.rs  objects.rs  resolve_errs.rs  runtime.rs  simplify_errs.rs  structure_errs.rs
src/resolved/: mod.rs
src/runtime/: code_block.rs  mod.rs  storage.rs
src/shared/: labels.rs  mod.rs  native_data.rs  native_type.rs  native_var.rs
src/simple/: mod.rs
src/simplifier/: expressions.rs  foundation.rs  helpers.rs  mod.rs  simplifier.rs  statements.rs
src/specialized/: mod.rs
src/structure/: builtins.rs  cast.rs  data_type.rs  entity.rs  expression.rs  func_call.rs  known_data.rs  mod.rs  program.rs  resolve.rs  resolve.rs.old  scope.rs  variable.rs
src/trivial/: data_type.rs  instruction.rs  make_llvm.rs  mod.rs  program.rs  trivializer.rs  variable.rs
src/types/: arithmetic.rs  base.rs
src/util/: iters.rs  known_data.pest  mod.rs  nvec.rs  parse_known_data.rs  parse_native_data.rs
src/vague/: builtins.rs  cast.rs  entity.rs  func_call.rs  known_data.rs  mod.rs  program.rs  resolve.rs  scope.rs
src/values/: base.rs  ptr.rs  simplify.rs  type_arithmetic.rs  type_compatibility.rs
targets/standalone/: main.cpp
targets/test_runner/: main.cpp
tests/: ct_assert.rs  tests.rs
tests/compile_ok/: prop_access.ns
tests/ct_assert_sources/: basic.ns  basic.wg  math.wg
util/: vague_parse.py
(+89 files in other folders)
