[package]
name = "nodespeak"
version = "0.3.0"
authors = ["Josh <joshua-maros@github.com>"]
edition = "2018"

description = "A JIT-ish compiler for number-crunching applications."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/nodespeak"
homepage = "https://gitlab.com/Code_Cube/nodespeak-compiler"
repository = "https://gitlab.com/Code_Cube/nodespeak-compiler"

[dependencies]
itertools = "0.10.3"
